# brawl-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  ROADMAP.md  capture.py  config.py  controller.py  debug.py  detector.py  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  COLLAB.md  PEDRO_CLAUDE_PROMPT.md  PEDRO_START.md  sync-session.js  update-active-session.js
.claude/.tasks/: active.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: shared-file.md  task.md
.github/workflows/: ci.yml
config/: anti_ban_profiles.json  hsv_profiles.json
scripts/: analyze_metrics.py
src/: anti_ban.py  behavior_engine.py  capture.py  config.py  controller.py  detector.py  game_state.py  logger.py  randomizer.py  state_machine.py  tactics.py
src/game_modes/: base.py  showdown.py
src/utils/: curves.py  db_schema.py  geometry.py  image_proc.py  resource_guard.py  threading_utils.py
tests/: test_core.py  test_phase2.py
