[project]
name = "brawl-bot"
version = "0.2.0"
description = "Brawl Stars Showdown bot su BlueStacks (Windows, screen-only)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Private :: Do Not Upload",
]
dependencies = [
    "opencv-python>=4.8.0,<5",
    "numpy>=1.24,<3",
    "mss>=7.0,<10",
    "pywin32>=306",
    "pyautogui>=0.9.54",
    "pydirectinput>=1.0.4",
    "loguru>=0.7,<1",
    "psutil>=5.9,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "hardware: richiede BlueStacks + schermo (skip in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
